[gd_scene load_steps=5 format=3 uid="uid://bsbg3g3kfx6f"]

[ext_resource type="Script" path="res://scripts/Menu.gd" id="1_u5biy"]
[ext_resource type="PackedScene" uid="uid://can6od2otra6s" path="res://scenes/canvas_ui/button.tscn" id="3_phbaw"]
[ext_resource type="PackedScene" uid="uid://b8tsw525wce4u" path="res://scenes/canvas_ui/btn_click.tscn" id="4_xuhxx"]

[sub_resource type="SystemFont" id="SystemFont_ujoka"]
font_names = PackedStringArray("Impact")

[node name="Menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u5biy")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="Separator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Game Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_ujoka")
theme_override_font_sizes/font_size = 64
text = "pop it!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="Separator2" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Play" parent="MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource("3_phbaw")]
layout_mode = 2
text = "Play"

[node name="Options" parent="MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource("3_phbaw")]
layout_mode = 2
text = "Options"

[node name="Controls" parent="MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource("3_phbaw")]
layout_mode = 2
text = "Controls"

[node name="Quit" parent="MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource("3_phbaw")]
layout_mode = 2
text = "Quit"

[node name="btn_click" parent="." instance=ExtResource("4_xuhxx")]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
